--- a/com.google.project2/test-output/index.html
+++ b/com.google.project2/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Google_Functionality" class="navigator-link">
-              <span class="suite-name border-passed">Google Functionality</span>
+              <span class="suite-name border-failed">Google Functionality</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Google_Functionality" class="hide-methods failed suite-Google_Functionality"> (hide)</a> <!-- hide-methods failed suite-Google_Functionality -->
+                      <a href="#" panel-name="suite-Google_Functionality" class="show-methods failed suite-Google_Functionality"> (show)</a> <!-- show-methods failed suite-Google_Functionality -->
+                    </span>
+                    <div class="method-list-content failed suite-Google_Functionality">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Google_Functionality" title="testCases.SearchPageTest" class="method navigator-link" hash-for-method="searchFunctionality">searchFunctionality</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Google_Functionality -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +116,12 @@
                     <div class="method-list-content passed suite-Google_Functionality">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Google_Functionality" title="testCases.FacebookLoginPageTest" class="method navigator-link" hash-for-method="launchURL">launchURL</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Google_Functionality" title="testCases.SearchPageTest" class="method navigator-link" hash-for-method="launchURL">launchURL</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Google_Functionality" title="testCases.FacebookLoginPageTest" class="method navigator-link" hash-for-method="pageLogin">pageLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Google_Functionality" title="testCases.SearchPageTest" class="method navigator-link" hash-for-method="pageLogin">pageLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Google_Functionality -->
@@ -122,10 +136,30 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Google_Functionality" class="panel Google_Functionality">
+          <div class="suite-Google_Functionality-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">testCases.SearchPageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchFunctionality">
+                  </a> <!-- searchFunctionality -->
+                  <span class="method-name">searchFunctionality</span>
+                  <div class="stack-trace">java.lang.IllegalAccessError: class pageActions.GoogleSearchPageActions (in unnamed module @0x5aaa6d82) cannot access class com.sun.tools.javac.util.Assert (in module jdk.compiler) because module jdk.compiler does not export com.sun.tools.javac.util to unnamed module @0x5aaa6d82
+	at pageActions.GoogleSearchPageActions.searchFunctionality(GoogleSearchPageActions.java:57)
+	at testCases.SearchPageTest.searchFunctionality(SearchPageTest.java:47)
+... Removed 23 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Google_Functionality-class-failed -->
           <div class="suite-Google_Functionality-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.FacebookLoginPageTest</span>
+              <span class="class-name">testCases.SearchPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -156,7 +190,7 @@
 &lt;suite name=&quot;Google Functionality&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Functional Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.FacebookLoginPageTest&quot;/&gt;
+      &lt;class name=&quot;testCases.SearchPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Functional Test --&gt;
 &lt;/suite&gt; &lt;!-- Google Functionality --&gt;
@@ -196,20 +230,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'pageLogin')
-data.setCell(0, 2, 'testCases.FacebookLoginPageTest')
-data.setCell(0, 3, 6053);
+data.setCell(0, 2, 'testCases.SearchPageTest')
+data.setCell(0, 3, 7340);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'launchURL')
-data.setCell(1, 2, 'testCases.FacebookLoginPageTest')
-data.setCell(1, 3, 1170);
+data.setCell(1, 2, 'testCases.SearchPageTest')
+data.setCell(1, 3, 2859);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'searchFunctionality')
+data.setCell(2, 2, 'testCases.SearchPageTest')
+data.setCell(2, 3, 754);
 window.suiteTableData['Google_Functionality']= { tableData: data, tableDiv: 'times-div-Google_Functionality'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Google_Functionality">
               </div> <!-- times-div-Google_Functionality -->
             </div> <!-- times-div -->
@@ -235,22 +273,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.FacebookLoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.SearchPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">launchURL</span>
-                <span class="method-start">2495 ms</span>
+                <span class="method-start">2136 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">pageLogin</span>
-                <span class="method-start">3670 ms</span>
+                <span class="method-start">5007 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">searchFunctionality</span>
+                <span class="method-start">12355 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">9809 ms</span>
+                <span class="method-start">13158 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
