--- a/com.google.project2/test-output/old/Google Functionality/classes.html
+++ b/com.google.project2/test-output/old/Google Functionality/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.FacebookLoginPageTest</td>
+<td>testCases.SearchPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>pageLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
