--- a/com.google.project2/test-output/old/Google Functionality/methods.html
+++ b/com.google.project2/test-output/old/Google Functionality/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Google Functionality</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ce7389">  <td>24/09/16 16:21:44</td>   <td>0</td> <td title="&gt;&gt;FacebookLoginPageTest.beforeSuite()[pri:0, instance:testCases.FacebookLoginPageTest@235ecd9f]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="ce7389">  <td>24/09/19 06:56:28</td>   <td>0</td> <td title="&gt;&gt;SearchPageTest.beforeSuite()[pri:0, instance:testCases.SearchPageTest@1ca3b418]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ce7389">  <td>24/09/16 16:21:46</td>   <td>2491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacebookLoginPageTest.launchURL()[pri:1, instance:testCases.FacebookLoginPageTest@235ecd9f]">launchURL</td> 
+<tr bgcolor="ce7389">  <td>24/09/19 06:56:30</td>   <td>2133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.launchURL()[pri:1, instance:testCases.SearchPageTest@1ca3b418]">launchURL</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ce7389">  <td>24/09/16 16:21:47</td>   <td>3666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacebookLoginPageTest.pageLogin()[pri:2, instance:testCases.FacebookLoginPageTest@235ecd9f]">pageLogin</td> 
+<tr bgcolor="ce7389">  <td>24/09/19 06:56:33</td>   <td>5004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.pageLogin()[pri:2, instance:testCases.SearchPageTest@1ca3b418]">pageLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ce7389">  <td>24/09/16 16:21:53</td>   <td>9805</td> <td title="&lt;&lt;FacebookLoginPageTest.afterSuite()[pri:0, instance:testCases.FacebookLoginPageTest@235ecd9f]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="ce7389">  <td>24/09/19 06:56:40</td>   <td>12353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.searchFunctionality()[pri:3, instance:testCases.SearchPageTest@1ca3b418]">searchFunctionality</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/19 06:56:41</td>   <td>13155</td> <td title="&lt;&lt;SearchPageTest.afterSuite()[pri:0, instance:testCases.SearchPageTest@1ca3b418]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
